# 4dGraphics

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  compile_commands.json  enable_profiler.sh  enable_radv_perftests.sh  engine_profiles.json  errors.txt  init.dot  vcpkg-configuration.json  vcpkg.json  vk_layer_settings.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: SetupAndBuild.yml  build-and-test.yml  buildOnCheap.yml  buildOnEverything.yml  cmake.yml
4dGraphics/: 4dGraphics.cpp  BindlessManager.cpp  BindlessManager.hpp  BufferAlloc.cpp  BufferAlloc.h  CMakeLists.txt  CommandBuffer.cpp  CommandBuffer.hpp  CommandBufferManager.cpp  CommandBufferManager.hpp  CommandQueue.h  Constants.h  Constants.hpp  Context.cpp  Context.hpp  DSAllocator.cpp  DSAllocator.hpp  Debug.cpp  Debug.h  Debug.hpp  Device.cpp  Device.hpp  DynamicStructureChain.cpp  DynamicStructureChain.hpp  GLId.cpp  GLId.h  GLUniformBlockDefinitions.h  GameCore.cpp  GameCore.h  GameCore.hpp  GameHandler.cpp  GameHandler.h  GameHandler.hpp  GameInputHandler.cpp  GameInputHandler.h  GameObject.h  GameRenderHandler.cpp  GameRenderHandler.h  GameRenderHandler.hpp  GameTickHandler.cpp  (+79 more)
4dGraphics/windows/: StackWalker.cpp  StackWalker.h
CMake/: CommonMacros.cmake  CppModules.cmake  FixBundle.cmake.in
Collisions/: CMakeLists.txt  Collisions.cpp  Collisions.h
Shaders/: 3d.vert  3dShadow.vert  CMakeLists.txt  ImGui.frag  ImGui.vert  Mandelbrot.comp  Mandelbrot2.comp  Simple.frag  Simple.vert  bindless.glsl  blitFilter.frag  collisionRender.frag  collisionRender.vert  compileAllShadersDeb.sh  deffered.frag  fontShader.frag  fontShader.vert  genericTextured.frag  postprocess.vert  shadow.frag  shadow.geom  simple.frag  simple.vert  simpleTextured.frag  simple_interface.glsl  toonFilter.frag
Shaders/include/: CommonCppGLSL.h  GLSLInit.glsl  Lights.glsl  Materials.glsl  Matrices.glsl
data/: NoTextureColor.dds  NoTextureNormal.dds  imgui.ini  log.txt
data/3dModels/: CubeRoom.mtl  CubeRoom2.dae  CubeRoom2.mtl  SpaceShuttle.mtl  cube2.mtl  princess peaches castle (outside).mtl  teapot.mtl
data/3dModels/SM64/: Peaches Castle.mtl
data/3dModels/wolf/: Wolf-Blender-2.82a.glb  Wolf-Blender-2.82a.gltf
data/shaders/: 3d.vert  3dShadow.vert  ImGui.frag  ImGui.vert  blitFilter.frag  collisionRender.frag  collisionRender.vert  deffered.frag  fontShader.frag  fontShader.vert  genericTextured.frag  postprocess.vert  shadow.frag  shadow.geom  simpleTextured.frag  toonFilter.frag
data/shaders/include/: CommonCppGLSL.glsl  CommonCppGLSL.h  GLSLInit.glsl  Lights.glsl  Materials.glsl  Matrices.glsl
shared/: CMakeLists.txt  CommonUtility.cpp  CommonUtility.h  GlmHeaders.h  imgui_wrapper.cpp
v4dg/: CMakeLists.txt  CommandBufferManager.cpp  CommandBufferManager.hpp  Config.cpp  Config.hpp  Constants.hpp  Context.cpp  Context.hpp  DSAllocator.cpp  DSAllocator.hpp  Device.hpp  ILogReciever.cpp  ILogReciever.hpp  PipelineBuilder.cpp  PipelineBuilder.hpp  Queue.hpp  Swapchain.cpp  Swapchain.hpp  TransferManager.hpp  VulkanConstructs.cpp  VulkanConstructs.hpp  VulkanResources.cpp  VulkanResources.hpp  cppHelpers.hpp  v4dgCore.hpp  v4dgVulkan.cpp  v4dgVulkan.hpp
